--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -620,3 +620,12 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+body {
+  transition: 0.2s background-color, 0.2s color;
+}
+
+body.dark {
+  background-color: #222;
+  color: #ccc;
+}
