Make dark theme work with syntax highlighting
Just copy and paste the theme, not sure how else to prefix the
css selectors with body.dark.

--- a/src/components/blog-post.css
+++ b/src/components/blog-post.css
@@ -1,3 +1,12 @@
 .custom-block.info {
   background-color: lightblue;
 }
+
+body {
+  transition: 0.2s background-color, 0.2s color;
+}
+
+body.dark {
+  background-color: #222;
+  color: #ccc;
+}
