--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,3 +3,18 @@
   margin: 0 auto;
   padding: 1.5em;
 }
+
+.custom-block.info {
+  background-color: lightblue;
+}
+
+body {
+  transition: 0.2s background-color, 0.2s color;
+  --body-background-color: white;
+  background-color: var(--body-background-color);
+}
+
+body.dark {
+  --body-background-color: #222;
+  color: #ccc;
+}
