--- a/src/components/prism-theme.css
+++ b/src/components/prism-theme.css
@@ -103,6 +103,7 @@ pre {
   color: var(--night-owl-16);
   background: var(--night-owl-3);
   border: 1px solid #e9e9e9;
+  box-sizing: border-box;
   border-radius: 0.3em;
 }
 
