--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,13 +1,3 @@
-.layout {
-  max-width: 760px;
-  margin: 0 auto;
-  padding: 1.5em;
-}
-
-.custom-block.info {
-  background-color: lightblue;
-}
-
 body {
   --body-background-color: white;
   --body-color: hsla(0, 0%, 0%, 0.8);
@@ -27,6 +17,63 @@ body.dark {
   --blockquote-color: hsla(0, 0%, 100%, 0.7);
   --blockquote-border-color: hsla(0, 0%, 100%, 0.1);
   --link-color: #82aaff;
+}
+
+.site-header {
+}
+
+.site-title {
+  display: block;
+  font-size: 24px;
+  text-align: center;
+  color: var(--body-color);
+  text-decoration: none;
+}
+
+.first-name,
+.last-name {
+  display: inline-block;
+  border-radius: 100%;
+  line-height: 0;
+  padding-left: 0.8em;
+  padding-right: 0.8em;
+  mix-blend-mode: multiply;
+  text-transform: lowercase;
+}
+
+.first-name::before,
+.last-name::before {
+  display: block;
+  content: "";
+  padding-bottom: calc(50% + 0.8em);
+}
+
+.first-name::after,
+.last-name::after {
+  display: block;
+  content: "";
+  padding-bottom: calc(50% + 0.8em);
+}
+
+.first-name {
+  background-color: #dbf8dd;
+  margin-right: -0.8em;
+}
+
+.last-name {
+  background-color: #d5f0f8;
+  margin-left: -0.8em;
+}
+
+.layout,
+.site-header {
+  max-width: 760px;
+  margin: 0 auto;
+  padding: 1.5em;
+}
+
+.custom-block.info {
+  background-color: lightblue;
 }
 
 .gatsby-resp-image-image {
