--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -66,3 +66,7 @@ div code[class*="language-"] {
 .gatsby-highlight code[class*="language-"] {
   white-space: pre;
 }
+
+hr {
+  background-color: var(--rule-color);
+}
