Add terminal block style

--- a/src/components/layout/header.module.css
+++ b/src/components/layout/header.module.css
@@ -87,6 +87,7 @@ body:global(.dark) .circleBackground {
   padding-bottom: 1.5em;
   display: flex;
   align-items: center;
+  transition: 0.2s border-color;
 }
 
 .bioImage {
