--- a/src/components/layout/prism-theme.css
+++ b/src/components/layout/prism-theme.css
@@ -50,7 +50,6 @@ code[class*="language-"],
 pre[class*="language-"] {
   color: var(--night-owl-1);
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-  font-size: 1em;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -102,14 +101,9 @@ pre {
 pre {
   color: var(--night-owl-16);
   background: var(--night-owl-3);
-  border: 1px solid #e9e9e9;
+  border: 1px solid var(--rule-color);
   box-sizing: border-box;
   border-radius: 0.3em;
-}
-
-body.dark :not(pre) > code,
-body.dark pre {
-  border: 0;
 }
 
 :not(pre) > code {
