--- a/src/components/custom-blocks/info-block.module.css
+++ b/src/components/custom-blocks/info-block.module.css
@@ -1,6 +1,6 @@
 .infoBlock {
-  background-color: rgba(16, 139, 230, 0.165);
-  border: 1px solid rgba(16, 139, 230, 0.2);
-  border-radius: 1em;
+  background-color: rgba(16, 139, 230, 0.1);
+  border: 1px solid rgba(16, 139, 230, 0.16);
+  border-radius: 6px;
   padding: 0 1.5em;
 }
