Improve navigation links
Add links to bottom of posts, revise some of the header/footer
links

--- a/src/components/layout/header.module.css
+++ b/src/components/layout/header.module.css
@@ -89,6 +89,10 @@ body:global(.dark) .circleBackground {
   transition: 0.2s border-color;
 }
 
+.bioInfoLineLinks {
+  text-transform: lowercase;
+}
+
 .bioImage {
   border-radius: 64px;
   display: block;
